--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,13 @@
-/* Sets up sizing, padding, and marjin for every element on the page */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* Sets the background color to #d9dcd6 for all body elements in HTML file */
 body {
     background-color: #d9dcd6;
 }
 
-/* Sets the padding to 20px, font, font color to #ffffff, and background color to #2a607c of all elements assigned with this class */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -18,18 +15,15 @@ body {
     color: #ffffff;
 }
 
-/* Sets all h1 elements that are within an element assigned with the header class to display inline and have a font size of 40px */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-/* Sets all elements assigned the class seo that are within an element assigned the class header to have #d9dcd6 font color */
 .header .seo {
     color: #d9dcd6;
 }
 
-/* Sets all section elements that are within an element assigned with the class header to have padding above the image of 15px, a 20px margin to the right of the image, places the content to the right of the container, the given font, and a font size of 20px */
 .header section {
     padding-top: 15px;
     margin-right: 20px;
@@ -38,24 +32,20 @@ body {
     font-size: 20px;
 }
 
-/* Sets all list elements within an unordered list element that are within a section elements that are within an element assigned with the class header to display inline and have a 25px margin to the left of the element */
 .header section ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-/* Sets all anchor elements to have the text color #ffffff and no text decoration */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-/* Sets all paragraph elements to have a font size of 16px */
 p {
     font-size: 16px;
 }
 
-/* Sets a background image, gives it a 800px height, 100% width, and 25pox margin at the bottom of the image. It also makes the image cover the whole page and places it in the center of the webpage*/
 .hero {
     height: 800px;
     width: 100%;
@@ -65,25 +55,21 @@ p {
     background-position: center;
 }
 
-/* Sets elements assigned the class float-left to have a 25px margin and places the content to the left of the container */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-/* Sets elements assigned the class float-right to have a 25px margin and places the content to the right of the container */
 .float-right {
     float: right;
     margin-left: 25px;
 }
 
-/* Sets all elements assigned the class content to display inline, have a 75% width, and a 20px margin to the left of the element */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
 
 .benefits {
     margin-right: 20px;
@@ -96,22 +82,26 @@ p {
     background-color: #2589bd;
 }
 
+/* I have refactored the code with the .benefit-block class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .benefit-block {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+/* I have refactored the code with the .benefit-block h3 class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .benefit-block h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
+/* I have refactored the code with the .benefit-block img class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .benefit-block img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
+/* I have refactored the code with the .content-block class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .content-block {
     margin-bottom: 20px;
     padding: 50px;
@@ -121,10 +111,12 @@ p {
     color: #ffffff;
 }
 
+/* I have refactored the code with the .content-block img class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .content-block img {
     max-height: 200px;
 }
 
+/* I have refactored the code with the .content-block h2 class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .content-block h2 {
     margin-bottom: 20px;
     font-size: 36px;
