--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,10 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* Added these id's in order for the nav links in header to jump to the specific section */
+#search-engine-optimization, #online-reputation-management, #social-media-marketing {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 /* I have refactored the code with the .content-block class and used in HTML for the 3 sections, thereby reducing duplicate code. */
 .content-block {
     margin-bottom: 20px;
@@ -132,3 +135,4 @@ p {
 .footer h4 {
     font-size: 20px;
 }
+
